For now, I have hidden the formatID labels for the donut chart by default and display them on hover of their corresponding arc. This is a temporary fix for the overlapping labels.

--- a/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
@@ -1160,6 +1160,12 @@ box-shadow:         -2px 0px 10px 0px rgba(50, 50, 50, 0.55);
 #Profile .id-label{
 	font-size: 14px;
 }
+.format-charts .labels{
+	visibility: hidden;
+}
+.format-charts .arc>path:hover + .labels{
+	visibility: visible;
+}
  
 
 
